# server/api/rest/admin.go
@@ -5,11 +5,15 @@ import (
 	"fmt"
 	"io"
 	"net/http"
+	"strconv"
+	"time"
 
 	"github.com/go-chi/render"
 	"github.com/stablecog/sc-go/database/ent"
 	"github.com/stablecog/sc-go/server/requests"
 	"github.com/stablecog/sc-go/server/responses"
+	"github.com/stablecog/sc-go/utils"
+	"k8s.io/klog/v2"
 )
 
 // Admin-related routes, these must be behind admin middleware and auth middleware
@@ -83,4 +87,55 @@ func (c *RestAPI) HandleDeleteGenerationOutput(w http.ResponseWriter, r *http.Re
 	}
 	render.Status(r, http.StatusOK)
 	render.JSON(w, r, res)
+}
+
+// HTTP Get - generations for admin
+func (c *RestAPI) HandleQueryGenerationsForAdmin(w http.ResponseWriter, r *http.Request) {
+	userID, _ := c.GetUserIDAndEmailIfAuthenticated(w, r)
+	if userID == nil {
+		return
+	}
+
+	// Validate query parameters
+	perPage := DEFAULT_PER_PAGE
+	var err error
+	if perPageStr := r.URL.Query().Get("per_page"); perPageStr != "" {
+		perPage, err = strconv.Atoi(perPageStr)
+		if err != nil {
+			responses.ErrBadRequest(w, r, "per_page must be an integer")
+			return
+		} else if perPage < 1 || perPage > MAX_PER_PAGE {
+			responses.ErrBadRequest(w, r, fmt.Sprintf("per_page must be between 1 and %d", MAX_PER_PAGE))
+			return
+		}
+	}
+
+	var cursor *time.Time
+	if cursorStr := r.URL.Query().Get("cursor"); cursorStr != "" {
+		cursorTime, err := utils.ParseIsoTime(cursorStr)
+		if err != nil {
+			responses.ErrBadRequest(w, r, "cursor must be a valid iso time string")
+			return
+		}
+		cursor = &cursorTime
+	}
+
+	filters := &requests.QueryGenerationFilters{}
+	err = filters.ParseURLQueryParameters(r.URL.Query())
+	if err != nil {
+		responses.ErrBadRequest(w, r, err.Error())
+		return
+	}
+
+	// Get generaions
+	generations, err := c.Repo.QueryGenerations(perPage, cursor, filters)
+	if err != nil {
+		klog.Errorf("Error getting generations for user: %s", err)
+		responses.ErrInternalServerError(w, r, "Error getting generations")
+		return
+	}
+
+	// Return generations
+	render.Status(r, http.StatusOK)
+	render.JSON(w, r, generations)
 }
