# server/api/rest/user.go
@@ -4,11 +4,8 @@ import (
 	"encoding/json"
 	"fmt"
 	"io"
-	"math"
 	"net/http"
-	"net/url"
 	"strconv"
-	"strings"
 	"time"
 
 	"github.com/go-chi/render"
@@ -207,14 +204,18 @@ func (c *RestAPI) HandleQueryGenerations(w http.ResponseWriter, r *http.Request)
 		cursor = &cursorTime
 	}
 
-	filters, err := ParseQueryGenerationFilters(r.URL.Query())
+	filters := &requests.QueryGenerationFilters{}
+	err = filters.ParseURLQueryParameters(r.URL.Query())
 	if err != nil {
 		responses.ErrBadRequest(w, r, err.Error())
 		return
 	}
 
+	// Ensure user ID is set to only include this users generations
+	filters.UserID = userID
+
 	// Get generaions
-	generations, err := c.Repo.GetUserGenerations(*userID, perPage, cursor, filters)
+	generations, err := c.Repo.QueryGenerations(perPage, cursor, filters)
 	if err != nil {
 		klog.Errorf("Error getting generations for user: %s", err)
 		responses.ErrInternalServerError(w, r, "Error getting generations")
@@ -279,264 +280,6 @@ func (c *RestAPI) HandleQueryCredits(w http.ResponseWriter, r *http.Request) {
 	// Return credits
 	render.Status(r, http.StatusOK)
 	render.JSON(w, r, creditsResponse)
-}
-
-// Parse filters from query parameters
-func ParseQueryGenerationFilters(rawQuery url.Values) (*requests.QueryGenerationFilters, error) {
-	filters := &requests.QueryGenerationFilters{}
-	for key, value := range rawQuery {
-		// model_ids
-		if key == "model_ids" {
-			if strings.Contains(value[0], ",") {
-				for _, modelId := range strings.Split(value[0], ",") {
-					parsed, err := uuid.Parse(modelId)
-					if err != nil {
-						return nil, fmt.Errorf("invalid model id: %s", modelId)
-					}
-					filters.ModelIDs = append(filters.ModelIDs, parsed)
-				}
-			} else {
-				parsed, err := uuid.Parse(value[0])
-				if err != nil {
-					return nil, fmt.Errorf("invalid model id: %s", value[0])
-				}
-				filters.ModelIDs = []uuid.UUID{parsed}
-			}
-		}
-		// scheduler_ids
-		if key == "scheduler_ids" {
-			if strings.Contains(value[0], ",") {
-				for _, schedulerId := range strings.Split(value[0], ",") {
-					parsed, err := uuid.Parse(schedulerId)
-					if err != nil {
-						return nil, fmt.Errorf("invalid scheduler id: %s", schedulerId)
-					}
-					filters.SchedulerIDs = append(filters.SchedulerIDs, parsed)
-				}
-			} else {
-				parsed, err := uuid.Parse(value[0])
-				if err != nil {
-					return nil, fmt.Errorf("invalid scheduler id: %s", value[0])
-				}
-				filters.SchedulerIDs = []uuid.UUID{parsed}
-			}
-		}
-		// Min and max height
-		if key == "min_height" {
-			minHeight, err := strconv.Atoi(value[0])
-			if err != nil {
-				return nil, fmt.Errorf("invalid min height: %s", value[0])
-			}
-			if minHeight > math.MaxInt32 {
-				return nil, fmt.Errorf("min height too large: %d", minHeight)
-			}
-			filters.MinHeight = int32(minHeight)
-		}
-		if key == "max_height" {
-			maxHeight, err := strconv.Atoi(value[0])
-			if err != nil {
-				return nil, fmt.Errorf("invalid max height: %s", value[0])
-			}
-			if maxHeight > math.MaxInt32 {
-				return nil, fmt.Errorf("max height too large: %d", maxHeight)
-			}
-			filters.MaxHeight = int32(maxHeight)
-		}
-		// Min and max width
-		if key == "min_width" {
-			minWidth, err := strconv.Atoi(value[0])
-			if err != nil {
-				return nil, fmt.Errorf("invalid min width: %s", value[0])
-			}
-			if minWidth > math.MaxInt32 {
-				return nil, fmt.Errorf("min width too large: %d", minWidth)
-			}
-			filters.MinWidth = int32(minWidth)
-		}
-		if key == "max_width" {
-			maxWidth, err := strconv.Atoi(value[0])
-			if err != nil {
-				return nil, fmt.Errorf("invalid max width: %s", value[0])
-			}
-			if maxWidth > math.MaxInt32 {
-				return nil, fmt.Errorf("max width too large: %d", maxWidth)
-			}
-			filters.MaxWidth = int32(maxWidth)
-		}
-		// Min and max inference steps
-		if key == "min_inference_steps" {
-			minInferenceSteps, err := strconv.Atoi(value[0])
-			if err != nil {
-				return nil, fmt.Errorf("invalid min inference steps: %s", value[0])
-			}
-			if minInferenceSteps > math.MaxInt32 {
-				return nil, fmt.Errorf("min inference steps too large: %d", minInferenceSteps)
-			}
-			filters.MinInferenceSteps = int32(minInferenceSteps)
-		}
-		if key == "max_inference_steps" {
-			maxInferenceSteps, err := strconv.Atoi(value[0])
-			if err != nil {
-				return nil, fmt.Errorf("invalid max inference steps: %s", value[0])
-			}
-			if maxInferenceSteps > math.MaxInt32 {
-				return nil, fmt.Errorf("max inference steps too large: %d", maxInferenceSteps)
-			}
-			filters.MaxInferenceSteps = int32(maxInferenceSteps)
-		}
-		// Min and max guidance scale, the same but float32 not int32
-		if key == "min_guidance_scale" {
-			minGuidanceScale, err := strconv.ParseFloat(value[0], 32)
-			if err != nil {
-				return nil, fmt.Errorf("invalid min guidance scale: %s", value[0])
-			}
-			filters.MinGuidanceScale = float32(minGuidanceScale)
-		}
-		if key == "max_guidance_scale" {
-			maxGuidanceScale, err := strconv.ParseFloat(value[0], 32)
-			if err != nil {
-				return nil, fmt.Errorf("invalid max guidance scale: %s", value[0])
-			}
-			filters.MaxGuidanceScale = float32(maxGuidanceScale)
-		}
-		// Widths
-		if key == "widths" {
-			if strings.Contains(value[0], ",") {
-				for _, width := range strings.Split(value[0], ",") {
-					parsed, err := strconv.Atoi(width)
-					if err != nil {
-						return nil, fmt.Errorf("invalid width: %s", width)
-					}
-					if parsed > math.MaxInt32 {
-						return nil, fmt.Errorf("width too large: %d", parsed)
-					}
-					filters.Widths = append(filters.Widths, int32(parsed))
-				}
-			} else {
-				parsed, err := strconv.Atoi(value[0])
-				if err != nil {
-					return nil, fmt.Errorf("invalid width: %s", value[0])
-				}
-				if parsed > math.MaxInt32 {
-					return nil, fmt.Errorf("width too large: %d", parsed)
-				}
-				filters.Widths = []int32{int32(parsed)}
-			}
-		}
-		// Heights
-		if key == "heights" {
-			if strings.Contains(value[0], ",") {
-				for _, height := range strings.Split(value[0], ",") {
-					parsed, err := strconv.Atoi(height)
-					if err != nil {
-						return nil, fmt.Errorf("invalid height: %s", height)
-					}
-					if parsed > math.MaxInt32 {
-						return nil, fmt.Errorf("height too large: %d", parsed)
-					}
-					filters.Heights = append(filters.Heights, int32(parsed))
-				}
-			} else {
-				parsed, err := strconv.Atoi(value[0])
-				if err != nil {
-					return nil, fmt.Errorf("invalid height: %s", value[0])
-				}
-				if parsed > math.MaxInt32 {
-					return nil, fmt.Errorf("height too large: %d", parsed)
-				}
-				filters.Heights = []int32{int32(parsed)}
-			}
-		}
-		// Inference Steps
-		if key == "inference_steps" {
-			if strings.Contains(value[0], ",") {
-				for _, inferenceStep := range strings.Split(value[0], ",") {
-					parsed, err := strconv.Atoi(inferenceStep)
-					if err != nil {
-						return nil, fmt.Errorf("invalid inference step: %s", inferenceStep)
-					}
-					if parsed > math.MaxInt32 {
-						return nil, fmt.Errorf("inference step too large: %d", parsed)
-					}
-					filters.InferenceSteps = append(filters.InferenceSteps, int32(parsed))
-				}
-			} else {
-				parsed, err := strconv.Atoi(value[0])
-				if err != nil {
-					return nil, fmt.Errorf("invalid inference step: %s", value[0])
-				}
-				if parsed > math.MaxInt32 {
-					return nil, fmt.Errorf("inference step too large: %d", parsed)
-				}
-				filters.InferenceSteps = []int32{int32(parsed)}
-			}
-		}
-		// Guidance Scales
-		if key == "guidance_scales" {
-			if strings.Contains(value[0], ",") {
-				for _, guidanceScale := range strings.Split(value[0], ",") {
-					parsed, err := strconv.ParseFloat(guidanceScale, 32)
-					if err != nil {
-						return nil, fmt.Errorf("invalid guidance scale: %s", guidanceScale)
-					}
-					filters.GuidanceScales = append(filters.GuidanceScales, float32(parsed))
-				}
-			} else {
-				parsed, err := strconv.ParseFloat(value[0], 32)
-				if err != nil {
-					return nil, fmt.Errorf("invalid guidance scale: %s", value[0])
-				}
-				filters.GuidanceScales = []float32{float32(parsed)}
-			}
-		}
-
-		// Order
-		if key == "order" {
-			if strings.ToLower(value[0]) == string(requests.SortOrderAscending) {
-				filters.Order = requests.SortOrderAscending
-			} else if strings.ToLower(value[0]) == string(requests.SortOrderDescending) {
-				filters.Order = requests.SortOrderDescending
-			} else {
-				return nil, fmt.Errorf("invalid order: '%s' expected '%s' or '%s'", value[0], requests.SortOrderAscending, requests.SortOrderDescending)
-			}
-		}
-		// Upscale status
-		if key == "upscaled" {
-			if strings.ToLower(value[0]) == string(requests.UpscaleStatusAny) {
-				filters.UpscaleStatus = requests.UpscaleStatusAny
-			} else if strings.ToLower(value[0]) == string(requests.UpscaleStatusNot) {
-				filters.UpscaleStatus = requests.UpscaleStatusNot
-			} else if strings.ToLower(value[0]) == string(requests.UpscaleStatusOnly) {
-				filters.UpscaleStatus = requests.UpscaleStatusOnly
-			} else {
-				return nil, fmt.Errorf("invalid upscaled: '%s' expected '%s', '%s', or '%s'", value[0], requests.UpscaleStatusAny, requests.UpscaleStatusNot, requests.UpscaleStatusOnly)
-			}
-		}
-		// Start and end date
-		if key == "start_dt" {
-			startDt, err := utils.ParseIsoTime(value[0])
-			if err != nil {
-				return nil, fmt.Errorf("invalid start_dt: %s", value[0])
-			}
-			filters.StartDt = &startDt
-		}
-		if key == "end_dt" {
-			endDt, err := utils.ParseIsoTime(value[0])
-			if err != nil {
-				return nil, fmt.Errorf("invalid end_dt: %s", value[0])
-			}
-			filters.EndDt = &endDt
-		}
-	}
-	// Descending default
-	if filters.Order == "" {
-		filters.Order = requests.SortOrderDescending
-	}
-	// Upscale status any default
-	if filters.UpscaleStatus == "" {
-		filters.UpscaleStatus = requests.UpscaleStatusAny
-	}
-	return filters, nil
 }
 
 // HTTP DELETE - admin delete generation
